# agentic-stocks-trading

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: test.yml
notebooks/: code.ipynb
src/agentic_stocks_trading/: __init__.py  config.py  main.py
src/agentic_stocks_trading/application/agent_service/: info_collection_runner.py  nodes_and_runners.py  research_agents.py
src/agentic_stocks_trading/domain/: exceptions.py  utils.py
src/agentic_stocks_trading/domain/memory/: financial_situation.py
src/agentic_stocks_trading/domain/prompts/: trading_prompts.py
src/agentic_stocks_trading/domain/tools/: analyst_agent_tools.py
src/agentic_stocks_trading/infrastructure/llm_providers/: llms.py
src/agentic_stocks_trading/infrastructure/monitoring/: intercept_handler.py  logger_factory.py
tests/: __init__.py  conftest.py  test_config.py  test_financial_situation.py
