[project]
name = "agentic-stocks-trading"
version = "0.1.0"
description = "Let us use the power of LLM to analyse stocks and provide suggestions"
readme = "README.md"
classifiers = [
    # TODO
]
license = {text = "MIT"}
dependencies = [
  "typer",
  "fastapi[standard]",
  "loguru",
  "pydantic",
  "pydantic-settings",
  "ipykernel",
  "pip>=25.2",
  "uv>=0.8.16",
  "langchain>=0.3.27",
  "langgraph>=0.6.7",
  "langchain-openai>=0.3.32",
  "tavily-python>=0.7.11",
  "yfinance>=0.2.65",
  "finnhub-python>=2.4.24",
  "stockstats>=0.6.5",
  "beautifulsoup4>=4.13.5",
  "chromadb>=1.0.20",
  "rich>=14.1.0",
]
requires-python = ">= 3.10"

[dependency-groups]
dev = [
    "coverage",
    "pre-commit",
    "pytest",
    "ruff",
]

[project.scripts]
agentic_stocks_trading = "agentic_stocks_trading.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.uv]
package = true
